--- a/.github/workflows/cppcheck-action.yml
+++ b/.github/workflows/cppcheck-action.yml
@@ -2,9 +2,9 @@ name: cppcheck-action
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
