--- a/.github/workflows/valgrind-check.yml
+++ b/.github/workflows/valgrind-check.yml
@@ -16,7 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: apt install dependency
         run: |
-          sudo apt-get -y install valgrind -y install libcunit1 libcunit1-doc libcunit1-dev 
+          sudo apt-get -y install valgrind 
+          sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
       - name: make test
         run: |
           make run -C Implementation/
