--- a/.github/workflows/valgrind-check.yml
+++ b/.github/workflows/valgrind-check.yml
@@ -19,5 +19,5 @@ jobs:
           sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
       - name: make test
         run: |
-          make run -C Implementation/
-          valgrind ./Implementation/a.out
+          make run -C 3_Implementation/
+          valgrind ./3_Implementation/a.out
