--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: make coverage
-        run: make coverage -C Implementation/
+        run: make coverage -C 3_Implementation/
