--- a/.github/workflows/cppcheck-action.yml
+++ b/.github/workflows/cppcheck-action.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Install cppcheck
         run: sudo apt-get -y install cppcheck
       - name: Cppcheck code
-        run: cppcheck Implementation/
+        run: cppcheck 3_Implementation/
